--- a/index.html
+++ b/index.html
@@ -77,9 +77,10 @@
 <div class="helpApp">
 
     <dl class="yuanzheDl">
-        <dt id="top2">问: app会收集并分享用户信息吗？</dt>
-        <dd>答:
-            app不会在未经用户授权的情况下私下收集任何用户信息，更不会分享任何信息给第三方.
+ 
+        <dd>
+            1、应用申请了读取手机状态的权限，目的是监测来电状态变化，以实现应用的核心功能即来电时自动更换铃声.
+	    2、应用申请了读写存储卡的权限，目的是让用户在应用内下载在线铃声到本地存储卡上。
         </dd>
     </dl>
 </div>
